[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Field.png" type="Texture" id=2]
[ext_resource path="res://Assets/Music/Netris_ost.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sprites/Pause.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/SoundOff.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/PauseField.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/NextFigureField.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/RecordField.png" type="Texture" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.2
autoplay = true

[node name="Field" type="Sprite" parent="."]
position = Vector2( 405, 910 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 2 )

[node name="PauseField" type="Sprite" parent="."]
position = Vector2( 1337, 890 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 6 )

[node name="NextFigureField" type="Sprite" parent="."]
position = Vector2( 392, 261 )
texture = ExtResource( 7 )

[node name="GameOverField" type="Sprite" parent="."]
position = Vector2( 835, 928 )
texture = ExtResource( 8 )

[node name="GameOver" type="Label" parent="GameOverField"]
margin_left = -73.0
margin_top = -41.0
margin_right = 70.0
margin_bottom = 36.0
text = "Game over"
align = 1
valign = 1

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 336.0
margin_right = 133.0
margin_bottom = 452.0
texture_normal = ExtResource( 4 )
expand = true

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 25.0
margin_top = 496.0
margin_right = 124.0
margin_bottom = 602.0
texture_normal = ExtResource( 5 )
expand = true

[node name="Score" type="Label" parent="."]
margin_left = 18.0
margin_top = 26.0
margin_right = 180.0
margin_bottom = 95.0
text = "Score:"
align = 1
valign = 1

[node name="Combo" type="Label" parent="."]
margin_left = 41.0
margin_top = 93.0
margin_right = 166.0
margin_bottom = 145.0
text = "Combo:"
align = 1
valign = 1

[node name="Speed" type="Label" parent="."]
margin_left = 222.0
margin_top = 30.0
margin_right = 340.0
margin_bottom = 90.0
text = "Speed:"
align = 1
valign = 1

[node name="Level" type="Label" parent="."]
margin_left = 227.0
margin_top = 107.0
margin_right = 356.0
margin_bottom = 170.0
text = "Level:"
align = 1
valign = 1

[node name="NumberLines" type="Label" parent="."]
margin_left = 471.0
margin_top = 38.0
margin_right = 611.0
margin_bottom = 97.0
text = "Lines:"
align = 1
valign = 1

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="button_down" from="PauseButton" to="." method="_on_pause_button_button_down"]
[connection signal="button_down" from="SoundButton" to="." method="_on_sound_button_button_down"]
